# sphinx_autodoc_variants

./: .gitignore  README.rst  requirements.txt  setup.cfg  setup.py
src/sphinx_autodoc_variants/: __init__.py  _version.py  variant_autodoc.py
