[metadata]
name = sphinx_autodoc_variants
summary = An extension for sphinx to allow automatic documentation of `variants` functions.
version = attr: src.VERSION
author = Paul Ganssle
author-email = paul@ganssle.io
home-page = https://github.com/python-variants/sphinx_autodoc_variants
license = Apache 2.0
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Documentation
    Topic :: Utilities

[wheel]
universal = 1

[mypy]
python_version = 3.6
show_column_numbers = True
show_error_context = True
ignore_missing_imports = True
follow_imports = skip
incremental = True
check_untyped_defs = True
warn_unused_ignores = True

[flake8]
show-source = True
